--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ before_script:
   - env | sort
   - docker run -it --rm --name nvchecker --mount type=bind,source=${PWD},target=/data/ -w /data -e NVCHECKER_GITHUB_TOKEN=${GH_TOKEN} snw35/nvchecker:latest nvchecker nvchecker.ini
   - docker run -it --rm --name dfupdate --mount type=bind,source=${PWD},target=/data/ -w /data snw35/dfupdate:latest
-  - if [[ $(git status --porcelain | wc -l) -eq 0 ]]; then
-      echo "No local changes detected, nothing to build, exiting.";
+  - if [[ $(git status --porcelain | wc -l) -eq 0 ]] && [[ -z ${TRAVIS_TAG} ]]; then
+      echo "No local changes detected and no tag set, nothing to build, exiting.";
       travis_terminate 0;
     else
-      echo "Local changes detected, continuing...";
+      echo "Local changes or tagged commit detected, continuing...";
       cp new_ver.txt old_ver.txt;
     fi
 
