--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,21 +6,9 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
--   repo: https://github.com/psf/black
-    rev: 25.1.0
+-   repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.13.1
     hooks:
-    -   id: black
--   repo: local
-    hooks:
-    -   id: flake8
-        name: flake8
-        entry: flake8
-        language: system
-        types: [python]
-        require_serial: true
-    -   id: pylint
-        name: pylint
-        entry: pylint
-        language: system
-        types: [python]
-        require_serial: true
+    -   id: ruff-check
+        args: [ --fix ]
+    -   id: ruff-format
