--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,3 +22,9 @@ jobs:
     with:
       IMAGE_TAG: 'DFUPDATE_VERSION'
     secrets: inherit
+
+  create-release:
+    needs: update-images
+    if: github.ref_name == github.event.repository.default_branch && needs.update-images.outputs.changed == 'true'
+    uses: snw35/cicd/.github/workflows/create-release.yaml@main
+    secrets: inherit
