--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -17,10 +17,14 @@ on:
         required: false
 
 jobs:
-  call-upstream-workflow:
-    uses: snw35/cicd/.github/workflows/github.yaml@main
+  update-images:
+    strategy:
+      matrix:
+        workdir: [.]
+    uses: snw35/cicd/.github/workflows/github.yaml@multistage
     with:
-      IMAGE_TAG: 'DFUPDATE_VERSION'
+      WORKDIR: ${{ matrix.workdir }}
+      IMAGE_TAG: DFUPDATE_VERSION
     secrets: inherit
 
   create-release:
